# howdy

./: .gitignore  .travis.yml  Dockerfile  Procfile  README.md  app.py  beer.js  bot.js  docker-compose.yml  package.json  readme.md  requirements.txt  setup.cfg  setup.py  tox.ini
examples/: beer.js  demo_bot.js
hbcbot/: app.py  commands.py
hbcbot/tests/: test_commands.py
src/: beer.js
