[metadata]
name = howdy
author = HomebrewChat
url = https://homebrewing.slack.com
description = Slackbot for Homebrew Chat Slack workspace
long-description = file: README.md
license = None
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.7
version = attr: setuptools_scm.get_version

[options]
python_requires = >=3.7
zip_safe = False

setup_requires =
    setuptools_scm

packages =
    hbcbot
